added comment commit

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
     <div class="container">
+        <!-- header part start -->
         <header>
             <section>
-
                 <nav class="navbar-area">
                     <div class="navbar-img">
                         <img src="img/logo/logo-light.png" alt="">
@@ -27,7 +27,7 @@
             </section>
 
             <section>
-                <div class="header-area">
+                <div class="header-img-area">
                     <div class="design-text">
                         <h1>Better design for <br>
                             your digital products</h1>
@@ -40,6 +40,9 @@
                 </div>
             </section>
         </header>
+        <!-- header part end -->
+
+        <!-- main part start -->
         <main>
             <section>
                 <h1 class="about-title">About Us</h1>
@@ -86,6 +89,9 @@
                 </div>
             </section>
         </main>
+        <!-- main part end -->
+
+        <!-- footer part start -->
         <footer>
             <section>
                 <div class="footer-area">
@@ -126,6 +132,7 @@
                 </div>
             </section>
         </footer>
+        <!-- footer part end -->
     </div>
 </body>
 
